# SkelHub

./: .gitignore  AGENT.md  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
core/: dilation.py  geodesic.py  lsf.py  maximal_balls.py  path_cost.py  skeleton.py
docs/: LOG.md  algorithms.md  architecture.md  evaluation.md
scripts/: run_algo.sh  run_eval.sh
skelhub/: __init__.py  __main__.py  api.py
skelhub/algorithms/: __init__.py
skelhub/algorithms/lee94/: __init__.py  backend.py  config.py
skelhub/algorithms/mcp/: __init__.py  backend.py  config.py  connected_components.py  dilation.py  distance_transform.py  geodesic.py  lsf.py  multi_object.py  path_cost.py  root_detection.py  skeleton.py
skelhub/cli/: main.py
skelhub/core/: __init__.py  interfaces.py  models.py  registry.py
skelhub/datasets/: __init__.py
skelhub/evaluation/: __init__.py  evaluator.py  geometry.py  graph_generation.py  morphology.py  placeholder.py  reporting.py  skel_to_graph.py  validation.py
skelhub/io/: __init__.py  nifti_writer.py
skelhub/postprocessing/: __init__.py
skelhub/postprocessing/graphgen/: __init__.py  api.py  classification.py  components.py  graphml.py  protograph.py
skelhub/preprocessing/: __init__.py
skelhub/visualization/: __init__.py  graph_viewer.py
test_graph/: branch.graphml  sample.graphml
tests/: test_graph_visualization.py
utils/: __init__.py  multi_object.py  root_detection.py
