[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skelhub"
version = "0.1.0"
description = "Unified skeletonization framework with MCP as the first backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geomdl>=5.3",
  "igraph>=0.11",
  "nibabel>=5.0",
  "numba>=0.58",
  "numpy>=1.24",
  "scikit-image>=0.21",
  "scipy>=1.10",
  "pyvista>=0.47,<0.48",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
skelhub = "skelhub.cli.main:main"

[tool.setuptools.packages.find]
include = ["skelhub*"]
